Bug 87474 - EDITING: Changing the name of a named range breaks references to it in formula
Summary: EDITING: Changing the name of a named range breaks references to it in formula
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.4.1 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.3.0 target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-19 02:30 UTC by Patrick
Modified: 2020-11-03 20:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (24.23 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-12-19 13:22 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick 2014-12-19 02:30:12 UTC
I have the following formula in a sheet:

=INDEX(MonthNumbers;MATCH($E$3;MonthNames;0);1)

If I change the named range MonthNames to MonthName, the formula breaks, does not get updated, and becomes:

=INDEX(MonthNumbers;MATCH($E$3;monthnames;0);1)

Cell E3 has a text value of "November".

In other contexts, like when using cell range validation, the reference to named range is updated correctly.
Comment 1 raal 2014-12-19 13:21:19 UTC
I can  confirm with LO 4.3.4, win7.
Comment 2 raal 2014-12-19 13:22:01 UTC
Created attachment 111045 [details]
test file
Comment 3 QA Administrators 2015-12-20 16:19:46 UTC Comment hidden (obsolete)
Comment 4 Eike Rathke (retired, only occasionally showing up) 2016-07-22 15:48:04 UTC
Taking.
Comment 5 Commit Notification 2016-07-26 14:35:08 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9710fd565f17278dc5e5ee645b3924544a8c4235

Resolves: tdf#87474 handle renaming of named expressions/ranges in formulas

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-11-03 20:05:51 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b7a862bbd438eeeb006b08d3fde709b383d1eeb7

tdf#87474: sc: Add UItest

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.