Resolves: tdf#87474 handle renaming of named expressions/ranges in formulas

Change-Id: If82b62505624c3c259371fa37de1994a94bbceb5